// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the NetworkQualityLevel component should render correctly for level 0 1`] = `
<div
  className="makeStyles-outerContainer-1"
>
  <div
    className="makeStyles-innerContainer-2"
  >
    <div
      style={
        Object {
          "background": "rgba(255, 255, 255, 0.2)",
          "height": "3px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "rgba(255, 255, 255, 0.2)",
          "height": "6px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "rgba(255, 255, 255, 0.2)",
          "height": "9px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "rgba(255, 255, 255, 0.2)",
          "height": "12px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "rgba(255, 255, 255, 0.2)",
          "height": "15px",
        }
      }
    />
  </div>
</div>
`;

exports[`the NetworkQualityLevel component should render correctly for level 3 1`] = `
<div
  className="makeStyles-outerContainer-1"
>
  <div
    className="makeStyles-innerContainer-2"
  >
    <div
      style={
        Object {
          "background": "white",
          "height": "3px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "white",
          "height": "6px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "white",
          "height": "9px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "rgba(255, 255, 255, 0.2)",
          "height": "12px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "rgba(255, 255, 255, 0.2)",
          "height": "15px",
        }
      }
    />
  </div>
</div>
`;

exports[`the NetworkQualityLevel component should render correctly for level 5 1`] = `
<div
  className="makeStyles-outerContainer-1"
>
  <div
    className="makeStyles-innerContainer-2"
  >
    <div
      style={
        Object {
          "background": "white",
          "height": "3px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "white",
          "height": "6px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "white",
          "height": "9px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "white",
          "height": "12px",
        }
      }
    />
    <div
      style={
        Object {
          "background": "white",
          "height": "15px",
        }
      }
    />
  </div>
</div>
`;
